Setup for PMD and FindBugs, Added log4j